--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
-h1 {
-    text-align: center;
+#squre{
+    height: 200px;
+    width: 200px;
+    border: 2px solid black;
+    
+}
+#circle{
+    height: 200px;
+    width: 200px;
+    border: 2px solid black;
+    border-radius: 50%;
 }
